--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
+              "Computer Systems Design" Professional Interest Community Chair, <em>IBM T. J. Watson Research Center</em>, 2017&mdash;2021.
+            </li>			
+            <li>
+              <i class="fa-li fa fa-check"></i>
               Technical Program Committee Member, <em>2021 Design Automation Conference</em> (DAC), San Francisco (USA), December 2021.
             </li>
             <li>
