--- a/index.html
+++ b/index.html
@@ -246,16 +246,24 @@
             </li>			
             <li>
               <i class="fa-li fa fa-check"></i>
-              Technical Program Committee Member, <em>2021 Design Automation Conference</em> (DAC), San Francisco (USA), December 2021.
+              Program Committee Member, <em>2021 Design Automation Conference</em> (DAC), San Francisco (USA), December 2021.
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Technical Program Committee Member, <em>2020 International Conference on Parallel Processing</em> (ICPP), virtual event, August 2020.
+              Ph.D. Dissertation Committee Member (two committees: 2020 and 2017).
+            </li>			
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Program Committee Member, <em>2020 International Conference on Parallel Processing</em> (ICPP), virtual event, August 2020.
             </li>						  
             <li>
               <i class="fa-li fa fa-check"></i>
-              Technical Program Committee Member, <em>2020 Design Automation Conference</em> (DAC), virtual event, July 2020.
+              Program Committee Member, <em>2020 Design Automation Conference</em> (DAC), virtual event, July 2020.
             </li>						  
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Senior Member of the Institute of Electrical and Electronics Engineers (IEEE), April 2019&mdash;present.
+            </li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Industrial Chair, <i>2018 ACM International Conference on Computing Frontiers</i> (CF), Italy, May 2018.
@@ -284,17 +292,17 @@
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              First Author, Book on <em>Rugged Embedded Systems: Computing in Harsh Environments</em>, Morgan Kaufmann Publishers, December 
+              Book on <em>Rugged Embedded Systems: Computing in Harsh Environments</em>, Morgan Kaufmann Publishers, December 
               2016.<br><a href="https://www.elsevier.com/books/rugged-embedded-systems/vega/978-0-12-802459-1" target="_blank">Book website</a>
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Guest Editor, <em>IEEE Micro Special Series on Harsh Chips</em>, IEEE Micro Journal, publication date: beginning in 2014.
+              Guest Editor, <em>IEEE Micro Special Series on Harsh Chips</em>, IEEE Micro Journal, 2014.
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Guest Editor, <em>IEEE JETCAS Special Issue on Robust and Energy-Secure Systems</em>, IEEE Journal on Emerging and Selected 
-              Topics in Circuits and Systems, publication date: June 2014.
+              Topics in Circuits and Systems, June 2014.
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -302,18 +310,7 @@
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Organizer of the <em>Tutorial/Workshop on Energy-Secure System Architectures</em> (ESSA). In conjunction with the International 
-              Symposium on Computer Architecture (ISCA).
-            </li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Organizer of the <em>Workshop on Highly-Reliable Power-Efficient Embedded Designs</em> (HARSH). In conjunction with the 
-              International Symposium on High-Performance Computer Architecture (HPCA).
-            </li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Member of the <em>Institute of Electrical and Electronics Engineers (IEEE)</em> and the <em>Association for Computing Machinery 
-              (ACM)</em>.
+              Organizer of multiple tutorials and workshops, including CogArch, SARA, HARSH, and ESSA.
             </li>
           </ul>
         </div>
