--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              General Chair, <i>2024 International Symposium on Computer Architecture</i> (ISCA), <em>to be announced</em>.
+              General Chair, <i>2024 International Symposium on Computer Architecture</i> (ISCA), to be announced.
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
