--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
+              Senior Member of the Institute of Electrical and Electronics Engineers (IEEE).
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
               General Chair, <i>2024 International Symposium on Computer Architecture</i> (ISCA), to be announced.
             </li>
             <li>
@@ -260,10 +264,6 @@
               <i class="fa-li fa fa-check"></i>
               Program Committee Member, <em>2020 Design Automation Conference</em> (DAC), virtual event, July 2020.
             </li>						  
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Senior Member of the Institute of Electrical and Electronics Engineers (IEEE), April 2019&mdash;present.
-            </li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Industrial Chair, <i>2018 ACM International Conference on Computing Frontiers</i> (CF), Italy, May 2018.
