--- a/index.html
+++ b/index.html
@@ -326,6 +326,28 @@
           <h3 class="mb-0">Conference Papers</h3>
           <ul class="fa-ul mb-0">
             <li>
+              <i class="fa-li fa fa-check"></i>  
+			  A. Vega, J.-D. Wellman, H. Franke, A. Buyuktosunoglu, P. Bose, A. Amarnath, H. Kassa, S. Pal, R. Dreslinski.
+			  <strong>STOMP: Agile Evaluation of Scheduling Policies in Heterogeneous Multi-Processors.</strong> In Proceedings
+			  of the Government Microcircuit Applications & Critical Technology Conference (GOMACTech 2021). Virtual event. March 2021.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  P. Bose, A. Vega, S. Adve, V. Adve, S. Misailovic, L. Carloni, K. Shepard, D. Brooks, V. Janapa Reddi, G.-Y. Wei.
+			  <strong>Secure and Resilient SoCs for Autonomous Vehicles.</strong> In Proceedings of the Government Microcircuit
+			  Applications & Critical Technology Conference (GOMACTech 2021). Virtual event. March 2021.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  E. Sisbot, A. Vega, A. Paidimarri, J.-D. Wellman, A. Buyuktosunoglu, P. Bose, D. Trilla. <strong>Multi-Vehicle Map
+			  Fusion using GNU Radio.</strong> In Proceedings of the GNU Radio Conference (GRCon 2019). Huntsville (AL). September 2019.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, P. Bose. <strong>Cognitive IoT Systems via Adaptive Swarm Intelligence.</strong> In Proceedings of the Government
+			  Microcircuit Applications & Critical Technology Conference (GOMACTech 2019). Albuquerque (NM). March 2019.
+			</li>
+            <li>
               <i class="fa-li fa fa-check"></i>
               A. Vega, A. Buyuktosunoglu, P. Bose. <strong>Towards “Smarter” Vehicles
               through Cloud-Backed Swarm Cognition.</strong> In Proceedings of the IEEE Intelligent Vehicles
@@ -377,10 +399,10 @@
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              P. Parida, A. Vega, A. Buyuktosunoglu, P. Bose, T. Chainer. <strong>Embedded Two-
-              Phase Liquid Cooling for Increasing Computational Efficiency.</strong> In Proceedings of
-              the IEEE Intersociety Conference on Thermal and Thermomechanical Phenomena
-              in Electronic Systems (ITherm 2016). Las Vegas (USA). May-June 2016.
+              P. Parida, A. Vega, A. Buyuktosunoglu, P. Bose, T. Chainer. <strong>Embedded Two-Phase
+			  Liquid Cooling for Increasing Computational Efficiency.</strong> In Proceedings of the
+			  IEEE Intersociety Conference on Thermal and Thermomechanical Phenomena in Electronic
+			  Systems (ITherm 2016). Las Vegas (USA). May-June 2016.
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -415,7 +437,7 @@
               A. Vega, A. Buyuktosunoglu, P. Bose. <strong>SMT-Centric Power-Aware Thread Placement
               in Chip Multiprocessors.</strong> In Proceedings of the 22nd International Conference
               on Parallel Architectures and Compilation Techniques (PACT 2013). Edinburgh
-              (Scotland). September 2013. Nominated for Best Paper.
+              (Scotland). September 2013. <strong>Nominated for Best Paper.</strong>
             </li>
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -463,16 +485,133 @@
               2011). Samos (Greece). July 2011.
             </li>
           </ul>
-		  <!--
+
           <div class="subheading mb-3"></div>
           <h3 class="mb-0">Journals</h3>
-          
+          <ul class="fa-ul mb-0">
+			<!--
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, A. Buyuktosunoglu, D. Callegaro, M. Levorato, P. Bose. <strong>Cloud-Backed Mobile
+				  Cognition: Power-Efficient Deep Learning in the Autonomous Vehicle Era.</strong> Springer
+				  Computing. Under review.
+            </li>
+		    -->
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  H. Sasaki, A. Buyuktosunoglu, A. Vega, P. Bose. <strong>Mitigating Power Contention: A
+				  Scheduling Based Approach.</strong> IEEE Computer Architecture Letters. May 2017.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, S. Mitra, S. Sethumadhavan. <strong>Guest Editorial: Robust and Energy-Secure Systems.
+			  </strong> In IEEE Journal on Emerging and Selected Topics in Circuits and Systems (JETCAS). June 2014.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  P. Tembey, A. Vega, A. Buyuktosunoglu, D. Da Silva, P. Bose. <strong>SMT switch: Software Mechanisms
+				  for Power Shifting.</strong> In IEEE Computer Architecture Letters. July-December 2013.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  V. Desmet, S. Girbal, A. Ramírez, O. Temam, A. Vega. <strong>ArchExplorer for Automatic Design
+				  Space Exploration.</strong> In IEEE Micro Special Issue: European Multicore Processing Projects.
+				  September/October 2010.
+			</li>
+		  </ul>
+
+          <div class="subheading mb-3"></div>
+          <h3 class="mb-0">Workshop Papers</h3>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, P. Bose, A. Buyuktosunoglu. <strong>Power Management for CMP/SMT Processors: Some Decision
+				  Control Pitfalls.</strong> In Proceedings of the 3rd Tutorial/Workshop on Energy-Secure System
+				  Architectures (ESSA 2013).  Tel Aviv (Israel). June 2013.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, P. Bose, A. Buyuktosunoglu. <strong>Power-Aware Thread Placement in SMT/CMP Architectures.</strong>
+			  In Proceedings of the 4th Workshop on Energy Efficient Design (WEED 2012). Portland (USA). June 2012.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, A. Rico, F. Cabarcas, A. Ramírez, M. Valero. <strong>Comparing Last-level Cache Designs for CMP
+				  Architectures.</strong> In Proceedings of the 2nd International Forum on Next-Generation Multicore/Manycore
+				  Technologies (IFMT 2010). Saint-Malo (France). June 2010.
+			</li>
+		  </ul>
+
           <div class="subheading mb-3"></div>
           <h3 class="mb-0">Technical Reports and Other Publications</h3>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, A. Amarnath, J.-D. Wellman, H. Kassa, S. Pal, H. Franke, A. Buyuktosunoglu, R. Dreslinski, P. Bose.
+			  <strong>STOMP: A Tool for Evaluation of Scheduling Policies in Heterogeneous Multi-Processors.</strong>
+			  arXiv preprint arXiv:2007.14371. 2020.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega. <strong>Performance and Power Optimizations in Chip Multiprocessors for Throughput-Aware Computation.
+			  </strong> Ph.D. Thesis. Department of Computer Architecture, Universitat Politècnica de Catalunya. Barcelona
+			  (Spain). July 2013.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Rico, F. Cabarcas, A. Quesada, M. Pavlovic, A. Vega, C. Villavieja, Y. Etsion, A. Ramírez. <strong>Scalable
+				  Simulation of Decoupled Accelerator Architectures.</strong> In Technical Report UPC-DAC-RR-2010-14.
+				  Universitat Politècnica de Catalunya. June 2010.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega. <strong>Performance, Power and Thermal Modeling in 3D Die-Stacking Architectures.</strong> M.Sc. Thesis.
+			  Department of Computer Architecture, Universitat Politècnica de Catalunya. Barcelona (Spain). January 2009.
+		    </li>
+		  </ul>
 
           <div class="subheading mb-3"></div>
           <h3 class="mb-0">Posters</h3>
-          -->
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, A. Buyuktosunoglu, H. Hanson, P. Bose, S. Ramani. <strong>Crank It Up or Dial It Down: Coordinated
+				  Multiprocessor Frequency and Folding Control.</strong> In the 46th International Symposium on Microarchitecture
+				  (MICRO 2013). Davis, California (USA). December 2013.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  A. Vega, A. Ramírez, M. Valero. <strong>3D Die-Stacking Architectures: State of the Art.</strong> In Advanced
+			  Computer Architecture and Compilation for Embedded Systems (ACACES 2008). L'Aquila (Italy), July 2008.
+		    </li>
+		  </ul>
+
+          <div class="subheading mb-3"></div>
+          <h3 class="mb-0">Invited Talks</h3>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  SLOHA 2021 (DATE 2021). <strong>SoCs for Autonomous Vehicles: Agile Design and Programmability Challenges.</strong>
+			  February 2021.<br>
+			  URL: <a target="_blank" href="https://www12.cs.fau.de/ws/sloha2021/">https://www12.cs.fau.de/ws/sloha2021/</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  UC San Diego. <strong>Cooperative Perception in Future Cars.</strong> November 2019.<br>
+			  URL: <a target="_blank" href="https://datascience.ucsd.edu/event/cooperative-perception-in-future-cars-3/">
+				  https://datascience.ucsd.edu/event/cooperative-perception-in-future-cars-3/</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  University of Buenos Aires (CS Department). <strong>Ciencias de la Computación y Carrera.</strong> December 2020.
+            </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  University of Buenos Aires (CS Department). <strong>Mobile Cognition &mdash; System Architectural Implications and Fundamental Trade-Offs.
+			  </strong> September 2017.<br>
+			  URL: <a target="_blank" href="http://www.fi.uba.ar/es/node/2752">http://www.fi.uba.ar/es/node/2752</a>
+			</li>
+		  </ul>
                     
         </div>
       </section>
