--- a/index.html
+++ b/index.html
@@ -525,6 +525,13 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
+			  A. Vega, J.-D. Wellman, H. Franke, A. Buyuktosunoglu, P. Bose, A. Amarnath, H. Kassa, S. Pal, R. Dreslinski.
+			  <strong>STOMP: Agile Evaluation of Scheduling Policies in Heterogeneous Multi-Processors.</strong>
+			  In Proceedings of the 3rd International Workshop on Domain Specific System Architecture (DOSSA-3).
+			  Virtual event. February 2021.
+            </li>			  
+            <li>
+              <i class="fa-li fa fa-check"></i>
 			  A. Vega, P. Bose, A. Buyuktosunoglu. <strong>Power Management for CMP/SMT Processors: Some Decision
 				  Control Pitfalls.</strong> In Proceedings of the 3rd Tutorial/Workshop on Energy-Secure System
 				  Architectures (ESSA 2013).  Tel Aviv (Israel). June 2013.
