--- a/index.html
+++ b/index.html
@@ -489,14 +489,12 @@
           <div class="subheading mb-3"></div>
           <h3 class="mb-0">Journals</h3>
           <ul class="fa-ul mb-0">
-			<!--
             <li>
               <i class="fa-li fa fa-check"></i>
 			  A. Vega, A. Buyuktosunoglu, D. Callegaro, M. Levorato, P. Bose. <strong>Cloud-Backed Mobile
 				  Cognition: Power-Efficient Deep Learning in the Autonomous Vehicle Era.</strong> Springer
-				  Computing. Under review.
+				  Computing. To be published.
             </li>
-		    -->
             <li>
               <i class="fa-li fa fa-check"></i>
 			  H. Sasaki, A. Buyuktosunoglu, A. Vega, P. Bose. <strong>Mitigating Power Contention: A
